<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/add_word_fon"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:padding="@dimen/_24sdp"
        android:scrollbars="none"
        tools:context=".activities.NewWordActivity">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_60ssp"

            android:gravity="center_horizontal"
            android:orientation="vertical">

        <EditText
                android:id="@+id/english"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/state_input"
                android:hint="@string/english"
                android:textColorHint="@color/blue_200"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:textColor="@color/gray_100"
                android:textSize="@dimen/_13ssp"/>
        <EditText
                android:id="@+id/russian"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/state_input"
                android:hint="@string/russian"
                android:textColorHint="@color/blue_200"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:textColor="@color/gray_100"
                android:textSize="@dimen/_13ssp"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20ssp"
        android:layout_marginLeft="@dimen/_30ssp">
            <com.google.android.material.button.MaterialButton
                    android:id="@+id/saveWord"
                    android:text="@string/add"
                    app:backgroundTint="@null"
                    android:background="@drawable/state_button"
                    android:layout_width="@dimen/_100ssp"
                    android:layout_height="@dimen/_100ssp"
                    style="@style/buttonText"
                    android:fontFamily="@font/regular"/>
            <com.google.android.material.button.MaterialButton
                    android:id="@+id/back"
                    android:text="@string/back"
                    app:backgroundTint="@null"
                    android:background="@drawable/state_button"
                    android:layout_width="@dimen/_100ssp"
                    android:layout_height="@dimen/_100ssp"
                    style="@style/buttonText"
                    android:fontFamily="@font/regular"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>