<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/translated_fon"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:padding="@dimen/_24sdp"
        android:scrollbars="none"
        tools:context=".activities.MemorizingEnglishActivity">

    <TextView
            android:text="@string/click_next_to_start"
            style="@style/fonText"
            android:fontFamily="@font/regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/clickNextToStart"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" android:layout_marginStart="48dp"/>
    <TextView
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:id="@+id/textEn"
            android:textAllCaps="true"
            android:textSize="24sp"
            android:textColor="@color/blue_300"
            android:fontFamily="serif" android:textAlignment="center" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="30dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="100dp"/>
    <TextView
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:id="@+id/textRu" android:textAllCaps="true"
            android:textSize="24sp"
            android:textColor="@color/gray_100"
            android:fontFamily="serif" android:textAlignment="center" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="30dp"
            app:layout_constraintTop_toBottomOf="@+id/textEn" android:layout_marginTop="60dp"/>
    <ImageView
            android:layout_width="@dimen/_100ssp"
            android:layout_height="@dimen/_100ssp" app:srcCompat="@drawable/state_button" android:id="@+id/home"
            app:layout_constraintTop_toBottomOf="@+id/back"
            android:layout_marginTop="20dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="15dp"/>
    <ImageView
            android:id="@+id/transferCheck"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp" app:srcCompat="@drawable/state_button"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/next"
            android:layout_marginStart="150dp" android:layout_marginTop="-10dp"/>
    <ImageView

            android:layout_width="@dimen/_100ssp"
            android:layout_height="@dimen/_100ssp" app:srcCompat="@drawable/state_button" android:id="@+id/next"
            app:layout_constraintTop_toBottomOf="@+id/back" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="250dp" android:layout_marginTop="-40dp"/>
    <ImageView
            android:layout_width="@dimen/_100ssp"
            android:layout_height="@dimen/_100ssp" app:srcCompat="@drawable/state_button" android:id="@+id/back"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="150dp" app:layout_constraintTop_toBottomOf="@+id/textRu"
            android:layout_marginTop="80dp"/>
    <TextView
            android:text="@string/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/fonText"
            android:fontFamily="@font/regular"
            app:layout_constraintEnd_toStartOf="@+id/back" app:layout_constraintBottom_toBottomOf="@+id/back"
            android:layout_marginEnd="-4dp" android:layout_marginBottom="36dp"/>
    <TextView
            android:text="@string/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/fonText"
            android:fontFamily="@font/regular"
            app:layout_constraintBottom_toBottomOf="@+id/next" app:layout_constraintEnd_toStartOf="@+id/next"
            android:layout_marginEnd="-8dp" android:layout_marginBottom="32dp"/>
    <TextView
            android:text="@string/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/fonText"
            android:fontFamily="@font/regular"
            app:layout_constraintEnd_toEndOf="@+id/home"
            app:layout_constraintBottom_toBottomOf="@+id/home" android:layout_marginEnd="120dp"
            android:layout_marginBottom="20dp"/>
    <TextView
            android:text="@string/check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/fonText"
            android:fontFamily="@font/regular"
            app:layout_constraintEnd_toEndOf="@+id/transferCheck"
            app:layout_constraintBottom_toBottomOf="@+id/transferCheck" android:layout_marginEnd="188dp"
            android:layout_marginBottom="40dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>