<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/grammar_fon"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:padding="@dimen/_4sdp"
        android:scrollbars="none"
        tools:context=".activities.SpellingOfWordsActivity">


    <TextView
            android:text="SOURCE TEXT :"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/regular"
            android:textColor="@color/blue_200"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="28dp" android:layout_marginStart="28dp"/>

    <TextView
            android:text="@string/entered_translation"
            android:layout_width="117dp"
            android:layout_height="37dp"
            android:fontFamily="@font/regular"
            android:textColor="@color/blue_200"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="40dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="208dp" android:textAlignment="center"/>
    <com.google.android.material.button.MaterialButton
            android:id="@+id/back_main"
            style="@style/buttonText"
            app:backgroundTint="@null"
            android:background="@drawable/state_button"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_50sdp"
            android:text="@string/main"
            android:fontFamily="@font/regular"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/back"/>
    <com.google.android.material.button.MaterialButton
            android:id="@+id/next"
            style="@style/buttonText"
            app:backgroundTint="@null"
            android:background="@drawable/state_button"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_50sdp"
            android:text="@string/next"
            android:fontFamily="@font/regular"
            app:layout_constraintTop_toBottomOf="@+id/entered_text"
            android:layout_marginTop="40dp" app:layout_constraintStart_toEndOf="@+id/back"
            android:layout_marginStart="28dp"/>
    <com.google.android.material.button.MaterialButton
            android:id="@+id/back"
            style="@style/buttonText"
            app:backgroundTint="@null"
            android:background="@drawable/state_button"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_50sdp"
            android:text="@string/back"
            android:textStyle="bold"
            android:fontFamily="@font/regular"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="12dp"
            app:layout_constraintTop_toBottomOf="@+id/entered_text" android:layout_marginTop="40dp"/>
    <com.google.android.material.button.MaterialButton
            android:id="@+id/check_spelling"
            style="@style/buttonText"
            app:backgroundTint="@null"
            android:background="@drawable/state_button"
            android:layout_width="111dp"
            android:layout_height="76dp"
            android:text="@string/see"
            android:textStyle="bold"
            android:fontFamily="@font/regular"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="36dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="95dp"/>
    <com.google.android.material.button.MaterialButton
            android:id="@+id/suggest"
            style="@style/buttonText"
            app:backgroundTint="@null"
            android:background="@drawable/state_button"
            android:layout_width="113dp"
            android:layout_height="82dp"
            android:text="@string/enter"
            android:fontFamily="@font/regular"
            app:layout_constraintStart_toEndOf="@+id/entered_text" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="272dp"/>
    <EditText
            android:layout_width="257dp"
            android:layout_height="60dp"
            android:id="@+id/entered_text"
            android:background="@drawable/input_image"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="20dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="284dp"
            android:textColorLink="@color/orange_300" android:textAllCaps="false" android:textAlignment="center"/>
    <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/textToTranslate"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" android:textSize="24sp"
            android:textColor="@color/gray_100" app:layout_constraintStart_toEndOf="@+id/check_spelling"
            android:layout_marginStart="30dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/errorText"
            android:textSize="20sp"
            android:textColor="@color/red_300"
            app:layout_constraintStart_toEndOf="@+id/check_spelling" android:layout_marginStart="44dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="164dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/correctText"
            android:textSize="20sp"
            android:textColor="@color/blue_300"
            app:layout_constraintStart_toEndOf="@+id/check_spelling" android:layout_marginStart="44dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="164dp"/>
    <TextView

            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/trueTranslate"
            android:textColor="@color/gray_100" android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/check_spelling" android:layout_marginStart="30dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="110dp"/>
    <TextView

            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/suggestText"
            android:textSize="24sp" android:textColor="@color/gray_100"
            app:layout_constraintStart_toEndOf="@+id/check_spelling" android:layout_marginStart="28dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="216dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
