<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:backgroundTint="@null"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:padding="@dimen/_24sdp"
        android:scrollbars="none"
        android:background="@drawable/main_fon"
        tools:context=".activities.MainActivity">


    <ImageView
            android:id="@+id/newWord"
            android:layout_width="@dimen/_100ssp"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginStart="-2dp"
            android:layout_marginTop="230dp"
            app:srcCompat="@drawable/state_button"
            app:layout_constraintStart_toEndOf="@+id/textView7" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="add new word"
            android:fontFamily="@font/regular" style="@style/fonText"
            android:layout_marginStart="80dp"
            android:layout_marginTop="280dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
            android:id="@+id/learnEnglishWords"
            android:layout_width="@dimen/_100ssp"
            android:layout_height="@dimen/_100ssp" app:srcCompat="@drawable/state_button"
            android:layout_marginStart="15dp" android:layout_marginTop="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"/>


    <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/learn_english_words"
            android:fontFamily="@font/regular" style="@style/fonText"
            android:layout_marginStart="-2dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/newWord"
            app:layout_constraintStart_toEndOf="@+id/learnEnglishWords"/>
    <ImageView
            android:id="@+id/learnRussianWords"
            android:layout_width="@dimen/_100ssp"
            android:layout_height="@dimen/_100ssp"
            android:layout_marginStart="236dp"
            app:srcCompat="@drawable/state_button"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:id="@+id/textView9"
            android:text="@string/learn_russian_words"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/regular" style="@style/fonText"
            app:layout_constraintTop_toBottomOf="@+id/textView8" android:layout_marginTop="50dp"
            app:layout_constraintEnd_toStartOf="@+id/learnRussianWords" android:layout_marginEnd="-2dp"
    />


    <ImageView
            android:id="@+id/spellingWord"
            android:layout_width="@dimen/_100ssp"
            android:layout_height="@dimen/_100ssp"
            android:layout_marginStart="50dp"
            app:srcCompat="@drawable/state_button"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            app:layout_constraintStart_toStartOf="parent"
    />
    <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spelling_of_words"
            android:fontFamily="@font/regular" style="@style/fonText"
            android:layout_marginStart="-2dp"
            app:layout_constraintStart_toEndOf="@+id/spellingWord"
            app:layout_constraintTop_toBottomOf="@+id/learnRussianWords"/>

    <ImageView
            android:id="@+id/learnWords"
            android:layout_width="@dimen/_100ssp"
            android:layout_height="@dimen/_100ssp"
            android:layout_marginStart="240dp"
            android:layout_marginTop="4dp"
            app:srcCompat="@drawable/state_button"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/learn_words"
            android:fontFamily="@font/regular" style="@style/fonText"
            android:layout_marginEnd="-2dp"
            app:layout_constraintEnd_toStartOf="@+id/learnWords"
            app:layout_constraintTop_toBottomOf="@+id/spellingWord"/>


</androidx.constraintlayout.widget.ConstraintLayout>